# react-complete-e-commerce

./: .gitignore
backend_python/: database.py  main.py  models.py  pyproject.toml
backend_python/api/: products.py  users.py
backend_python/crud/: product.py  user.py
backend_python/postman/: collection
backend_python/schemas/: product.py  review.py  user.py
frontend/: package-lock.json
frontend/src/actions/: cartActions.js  orderActions.js  productActions.js  userActions.js
frontend/src/components/: Footer.js  Product.js  ProductCarousel.js
frontend/src/screens/: HomeScreen.js  OrderListScreen.js  OrderScreen.js  PlaceOrderScreen.js  ProductEditScreen.js  ProductListScreen.js  ProductScreen.js  ProfileScreen.js  UserEditScreen.js  UserListScreen.js
